[FIX] Unaligned sidebar elements

--- a/public/css/startPage.css
+++ b/public/css/startPage.css
@@ -38,19 +38,26 @@ body {
     position: sticky;
     top: 0;
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.sidebar h1 {
-    color: white;
+.sidebar .sidebar-header {
+    color: var(--thistle-light);
     margin-bottom: 5rem;
     padding-left: 2rem;
     padding-right: 2rem;
+    font-weight: bold;
+    font-size: 4rem;
+    text-align: center;
 }
 
 .sidebar .sidebar-nav {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    align-items: center;
 }
 
 .sidebar .sidebar-nav li {
